--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ Django==1.9
 argparse==1.2.1
 dj-database-url==0.3.0
 dj-static==0.0.6
+django-bootstrap3==6.2.2
 django-registration==2.0.3
 django-registration-redux==1.2
 django-toolbelt==0.0.1
